Fixing Spacing

--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,22 @@ code {
     monospace;
 }
 
-/* #metaDataButton {
-  float: left;
-  background-color: white;
-  border: 1px solid #ddd;
-} */
+.docNav {
+  margin-top: 10px;
+  width: 73vw;
+  display: inline-block;
+}
+.docNav {
+  width: 73vw;
+  display: inline-block;
+}
+
+#metaDataButton {
+  float: right;
+  margin-top: 16px;
+  padding: 8px 16px;
+
+}
 #metaDataButton:hover {
   background-color: #ddd;
 }
@@ -107,16 +118,21 @@ div.accordion {
 }
 
 .pagination {
+  float: left;
   display: block;
 }
 
 .lightButton { 
   border: solid #ddd 2px; 
   margin:0 2px 0 0; 
-  /* padding:7px 10px;  */
+  padding:7px 10px; 
   -webkit-user-select: none; -moz-user-select: none; user-select: none; -moz-border-radius: 4px; 
   border-radius: 4px; 
   background: #FFFFFF; }
+
+  .lightButton:hover:enabled{
+    background: #ddd; 
+  }
 
 .darkButton { 
   border: solid #bbb 2px; 
@@ -126,7 +142,15 @@ div.accordion {
   border-radius: 4px; 
   background: #FFFFFF; }
 
+  .darkButton:hover:enabled{
+    background: #ddd; 
+  }
+
 .centerNotice {
   font-size: large;
   text-align: center;
 }
+.topForm {
+  margin-bottom: 0px;
+}
+
